--- a/GameStateManagementSample/GameStateManagementSample/GameStateManagementSample.csproj
+++ b/GameStateManagementSample/GameStateManagementSample/GameStateManagementSample.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Entity.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Global.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Mob.cs" />
     <Compile Include="PathToPlayer.cs" />
     <Compile Include="Player.cs" />
@@ -71,6 +72,9 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
