--- a/GameStateManagementSample/GameStateManagementSample/GameStateManagementSample.csproj
+++ b/GameStateManagementSample/GameStateManagementSample/GameStateManagementSample.csproj
@@ -40,12 +40,21 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CombatManager.cs" />
-    <Compile Include="Entity.cs" />
+    <Compile Include="Entities\Entity.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Global.cs" />
-    <Compile Include="Mob.cs" />
+    <Compile Include="Maps\City.cs" />
+    <Compile Include="Maps\DungeonCentral.cs" />
+    <Compile Include="Maps\DungeonEast.cs" />
+    <Compile Include="Maps\DungeonNorth.cs" />
+    <Compile Include="Maps\DungeonSouth.cs" />
+    <Compile Include="Maps\DungeonWest.cs" />
+    <Compile Include="Maps\EternalEvolutionMap.cs" />
+    <Compile Include="Maps\Forest.cs" />
+    <Compile Include="Maps\ForestMapCreationStrategy.cs" />
+    <Compile Include="Entities\Mob.cs" />
     <Compile Include="PathToPlayer.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Entities\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager\GameScreen.cs" />
     <Compile Include="ScreenManager\InputState.cs" />
@@ -82,6 +91,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
